membuat header dan text perkenalan

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>belajar git</title>
 </head>
 <body>
-    halo ini git
+    <h1>ini header</h1>
+    <p>perkenalan ini adalah wrb untuk belajar git</p>
 </body>
 </html>
